7-spring-cloud-microservices: add project